--- a/vuna_shop/apps/cart/templates/cart/cart.html
+++ b/vuna_shop/apps/cart/templates/cart/cart.html
@@ -36,7 +36,7 @@
                                     <a href="?change_quantity={{ item.id }}&quantity=-1">-</a>
                                     <a href="?change_quantity={{ item.id }}&quantity=1">+</a>
                                 </td>
-                                <td>${{ item.total_price }}</td>
+                                <td>₦{{ item.total_price }}</td>
                                 <td><a href="?remove_from_cart={{ item.id }}" class="delete"></a></td>
                             </tr>
                         {% endfor %}
@@ -47,7 +47,7 @@
                             <td></td>
                             <td><strong>Total cost</strong></td>
                             <td><strong>{{ cart|length}}</strong></td>
-                            <td colspan="2"><strong>${{ cart.get_total_cost }}</strong></td>
+                            <td colspan="2"><strong>₦{{ cart.get_total_cost }}</strong></td>
                         </tr>
                     </tfoot>
                 </table>
